--- a/package.json
+++ b/package.json
@@ -4,12 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "node-sass -w sass/ -o dist/css -r"
+    "watch:sass": "node-sass -w scss/ -o dist/css -r",
+    "watch:pug": "pug -w -P pug/ -o dist/",
+    "devserver": "live-server dist/",
+    "start": "npm-run-all --parallel devserver watch:sass watch:pug",
+    "compile:sass": "node-sass scss/ -o dist/css",
+    "prefix:css": "postcss --use autoprefixer -c options.json dist/css/main.css -o dist/css/main.css",
+    "compress:css": "node-sass dist/css/main.css dist/css/main.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^4.13.1"
+    "autoprefixer": "^9.7.6",
+    "concat": "^1.0.3",
+    "live-server": "^1.2.1",
+    "node-sass": "^4.13.1",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^7.1.1",
+    "pug-cli": "^1.0.0-alpha6"
   }
 }
