Fix pug to not output files in includes folder

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "watch:sass": "node-sass -w scss/ -o dist/css -r",
-    "watch:pug": "pug -w -P pug/ -o dist/",
+    "watch:pug": "pug -w -P pug/templates -o dist/",
     "devserver": "live-server dist/",
     "start": "npm-run-all --parallel devserver watch:sass watch:pug",
     "compile:sass": "node-sass scss/ -o dist/css",
     "prefix:css": "postcss --use autoprefixer -c options.json dist/css/main.css -o dist/css/main.css",
     "compress:css": "node-sass dist/css/main.css dist/css/main.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass prefix:css compress:css"
+    "build:css": "npm-run-all compile:sass prefix:css compress:css",
+    "pug": "pug --help"
   },
   "keywords": [],
   "author": "",
